navbar 2 electric boogaloo

--- a/drumline.html
+++ b/drumline.html
@@ -9,15 +9,17 @@
 </head>
 
 <body>
-  <nav>
-    <a class="item" href="index.html">Home</a>
-    <a class="item" href="calendar.html">Information</a>
-    <a class="item" href="drill.html">Drill</a>
-    <a class="item" href="brass.html">Brass</a>
-    <a class="item" href="woodwinds.html">Woodwinds</a>
-    <a class="active" href="drumline.html">Drumline</a>
-    <a class="item" href="guard.html">Guard</a>
-    <a class="item" href="scroll.html">Scroll</a>
-  </nav>
+  <div>
+    <ul class="topnav">
+    <li class="topnavli"><a href="index.html">Home</a></li>
+    <li class="topnavli"><a class="item" href="calendar.html">Information</a></li>
+    <li class="topnavli"><a class="item" href="drill.html">Drill</a></li>
+    <li class="topnavli"><a class="item" href="brass.html">Brass</a></li>
+    <li class="topnavli"><a class="item" href="woodwinds.html">Woodwinds</a></li>
+    <li class="topnavli"><a class="active" class="item" href="drumline.html">Drumline</a></li>
+    <li class="topnavli"><a class="item" href="guard.html">Guard</a></li>
+    <li class="topnavli"><a class="item" href="scroll.html">Scroll</a></li>
+  </ul>
+</div>
 <script type="text/javascript" src="script/index.js"></script>
 </html>
