--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 
 <body>
-  <center><nav>
-    <a class="active" href="index.html">Home</a>
-    <a class="item" href="calendar.html">Information</a>
-    <a class="item" href="drill.html">Drill</a>
-    <a class="item" href="brass.html">Brass</a>
-    <a class="item" href="woodwinds.html">Woodwinds</a>
-    <a class="item" href="drumline.html">Drumline</a>
-    <a class="item" href="guard.html">Guard</a>
-    <a class="item" href="scroll.html">Scroll</a>
-  </nav></center>
+  <div>
+    <ul class="topnav">
+    <li class="topnavli"><a class="active" href="index.html">Home</a></li>
+    <li class="topnavli"><a class="item" href="calendar.html">Information</a></li>
+    <li class="topnavli"><a class="item" href="drill.html">Drill</a></li>
+    <li class="topnavli"><a class="item" href="brass.html">Brass</a></li>
+    <li class="topnavli"><a class="item" href="woodwinds.html">Woodwinds</a></li>
+    <li class="topnavli"><a class="item" href="drumline.html">Drumline</a></li>
+    <li class="topnavli"><a class="item" href="guard.html">Guard</a></li>
+    <li class="topnavli"><a class="item" href="scroll.html">Scroll</a></li>
+  </ul>
+</div>
     <center><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></center><br>
     <iframe id="remind-widget" title="Remind Messages" alt="Remind Messages"src="https://widgets.remind.com/widget?height=500&join=true&token=f9d9faa031ef013642500242ac110002"></iframe><br>
 </body>
