--- a/scroll.html
+++ b/scroll.html
@@ -1,13 +1,15 @@
-<nav>
-  <a class="item" href="index.html">Home</a>
-  <a class="item" href="calendar.html">Information</a>
-  <a class="item" href="drill.html">Drill</a>
-  <a class="item" href="brass.html">Brass</a>
-  <a class="item" href="woodwinds.html">Woodwinds</a>
-  <a class="item" href="drumline.html">Drumline</a>
-  <a class="item" href="guard.html">Guard</a>
-  <a id="selected" href="scroll.html">Scroll</a>
-</nav>
+<div>
+  <ul class="topnav">
+  <li class="topnavli"><a href="index.html">Home</a></li>
+  <li class="topnavli"><a class="item" href="calendar.html">Information</a></li>
+  <li class="topnavli"><a class="item" href="drill.html">Drill</a></li>
+  <li class="topnavli"><a class="item" href="brass.html">Brass</a></li>
+  <li class="topnavli"><a class="item" href="woodwinds.html">Woodwinds</a></li>
+  <li class="topnavli"><a class="item" href="drumline.html">Drumline</a></li>
+  <li class="topnavli"><a class="item" href="guard.html">Guard</a></li>
+  <li class="topnavli"><a class="active" class="item" href="scroll.html">Scroll</a></li>
+</ul>
+</div>
 <link href="styles/index.css" rel="stylesheet" type="text/css" />
 <link href="styles/parallax.css" rel="stylesheet" type="text/css" />
 
