--- a/scroll.html
+++ b/scroll.html
@@ -1,15 +1,15 @@
-<div>
+<nav>
   <ul class="topnav">
-  <li class="topnavli"><a href="index.html">Home</a></li>
-  <li class="topnavli"><a class="item" href="calendar.html">Information</a></li>
-  <li class="topnavli"><a class="item" href="drill.html">Drill</a></li>
-  <li class="topnavli"><a class="item" href="brass.html">Brass</a></li>
-  <li class="topnavli"><a class="item" href="woodwinds.html">Woodwinds</a></li>
-  <li class="topnavli"><a class="item" href="drumline.html">Drumline</a></li>
-  <li class="topnavli"><a class="item" href="guard.html">Guard</a></li>
-  <li class="topnavli"><a class="active" class="item" href="scroll.html">Scroll</a></li>
-</ul>
-</div>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="calendar.html">Information</a></li>
+    <li><a href="drill.html">Drill</a></li>
+    <li><a href="brass.html">Brass</a></li>
+    <li><a href="woodwinds.html">Woodwinds</a></li>
+    <li><a href="drumline.html">Drumline</a></li>
+    <li><a href="guard.html">Guard</a></li>
+    <li><a href="scroll.html">Scroll</a></li>
+  </ul>
+</nav>
 <link href="styles/index.css" rel="stylesheet" type="text/css" />
 <link href="styles/parallax.css" rel="stylesheet" type="text/css" />
 
