added selected ID to navbar

--- a/drill.html
+++ b/drill.html
@@ -14,7 +14,7 @@
     <ul class="topnav">
       <li><a href="index.html">Home</a></li>
       <li><a href="calendar.html">Information</a></li>
-      <li><a href="drill.html">Drill</a></li>
+      <li><a href="drill.html" id="selected">Drill</a></li>
       <li><a href="brass.html">Brass</a></li>
       <li><a href="woodwinds.html">Woodwinds</a></li>
       <li><a href="drumline.html">Drumline</a></li>
