--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav>
     <ul class="topnav">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html" id="selected">Home</a></li>
       <li><a href="calendar.html">Information</a></li>
       <li><a href="drill.html">Drill</a></li>
       <li><a href="brass.html">Brass</a></li>
