--- a/scroll.html
+++ b/scroll.html
@@ -7,7 +7,7 @@
     <li><a href="woodwinds.html">Woodwinds</a></li>
     <li><a href="drumline.html">Drumline</a></li>
     <li><a href="guard.html">Guard</a></li>
-    <li><a href="scroll.html">Scroll</a></li>
+    <li><a href="scroll.html" id="selected">Scroll</a></li>
   </ul>
 </nav>
 <link href="styles/index.css" rel="stylesheet" type="text/css" />
