--- a/brass.html
+++ b/brass.html
@@ -14,7 +14,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="calendar.html">Information</a></li>
       <li><a href="drill.html">Drill</a></li>
-      <li><a href="brass.html">Brass</a></li>
+      <li><a href="brass.html" id="selected">Brass</a></li>
       <li><a href="woodwinds.html">Woodwinds</a></li>
       <li><a href="drumline.html">Drumline</a></li>
       <li><a href="guard.html">Guard</a></li>
