--- a/calendar.html
+++ b/calendar.html
@@ -12,7 +12,7 @@
   <nav>
     <ul class="topnav">
       <li><a href="index.html">Home</a></li>
-      <li><a href="calendar.html">Information</a></li>
+      <li><a href="calendar.html" id="selected">Information</a></li>
       <li><a href="drill.html">Drill</a></li>
       <li><a href="brass.html">Brass</a></li>
       <li><a href="woodwinds.html">Woodwinds</a></li>
