--- a/drumline.html
+++ b/drumline.html
@@ -16,7 +16,7 @@
       <li><a href="drill.html">Drill</a></li>
       <li><a href="brass.html">Brass</a></li>
       <li><a href="woodwinds.html">Woodwinds</a></li>
-      <li><a href="drumline.html">Drumline</a></li>
+      <li><a href="drumline.html" id="selected">Drumline</a></li>
       <li><a href="guard.html">Guard</a></li>
       <li><a href="scroll.html">Scroll</a></li>
     </ul>
