--- a/guard.html
+++ b/guard.html
@@ -17,7 +17,7 @@
       <li><a href="brass.html">Brass</a></li>
       <li><a href="woodwinds.html">Woodwinds</a></li>
       <li><a href="drumline.html">Drumline</a></li>
-      <li><a href="guard.html">Guard</a></li>
+      <li><a href="guard.html" id="selected">Guard</a></li>
       <li><a href="scroll.html">Scroll</a></li>
     </ul>
   </nav>
