--- a/woodwinds.html
+++ b/woodwinds.html
@@ -15,7 +15,7 @@
       <li><a href="calendar.html">Information</a></li>
       <li><a href="drill.html">Drill</a></li>
       <li><a href="brass.html">Brass</a></li>
-      <li><a href="woodwinds.html">Woodwinds</a></li>
+      <li><a href="woodwinds.html" id="selected">Woodwinds</a></li>
       <li><a href="drumline.html">Drumline</a></li>
       <li><a href="guard.html">Guard</a></li>
       <li><a href="scroll.html">Scroll</a></li>
