--- a/drill.html
+++ b/drill.html
@@ -30,35 +30,32 @@
       <iframe id="part4drill" class="drillvid" src="https://www.youtube.com/embed/E7TcJD5QII8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </center><br>
     <div id="drillselect">
-    <center><div id="selector">
-    <h2>Drill Sheets</h2>
-    <h4>Section</h4>
-    <select id="instrument" >
-      <option value="A">Base Clanent</option>
-      <option value="B">Baratone</option>
-      <option value="C">Clarenet</option>
-      <option value="F">Flute</option>
-      <option value="G">Guard</option>
-      <option value="M">Mellophone</option>
-      <option value="N">Tenor Sax</option>
-      <option value="O">Bass Drum</option>
-      <option value="Q">Quints</option>
-      <option value="R">Trombone</option>
-      <option value="S">Alto Sax</option>
-      <option value="T">Trumpet</option>
-      <option value="U">Tuba</option>
-      <option value="Y">Cymbals</option>
-      <option value="Z">Snares</option>
-</select>
-<input type="text" name="" placeholder="enter your drill number" id="number" value="">
-<button type="button" onclick="test()" id="link" name="button">Search</button>
-<br>
-<br>
-<br>
-<br>
-<br>
-<iframe id="my_iframe" style="display:none;">
-</div></center>
-</div>
+    <center>
+    <div id="selector">
+      <h2>Drill Sheets</h2>
+      <h4>Section</h4>
+      <select id="instrument">
+        <option value="A">Bass Clarinet</option>
+        <option value="B">Baratone</option>
+        <option value="C">Clarinet</option>
+        <option value="F">Flute</option>
+        <option value="G">Guard</option>
+        <option value="M">Mellophone</option>
+        <option value="N">Tenor Sax</option>
+        <option value="O">Bass Drum</option>
+        <option value="Q">Quints</option>
+        <option value="R">Trombone</option>
+        <option value="S">Alto Sax</option>
+        <option value="T">Trumpet</option>
+        <option value="U">Tuba</option>
+        <option value="Y">Cymbals</option>
+        <option value="Z">Snare</option>
+      </select>
+      <input type="text" name="" placeholder="enter your drill number" id="number" value="">
+      <button type="button" onclick="test()" id="link" name="button">Search</button>
+      <br><br><br><br><br>
+      <iframe id="my_iframe" style="display:none;">
+    </div></center>
+  </div>
 </body>
 </html>
