--- a/scroll.html
+++ b/scroll.html
@@ -15,13 +15,13 @@
 
 <main class="wrapper">
   <section class="section parallax bg1">
-    <h1>Section 1</hi>
+    <h1>Section 1</h1>
   </section>
   <section class="section static">
     <h1>Boring</h1>
   </section>
   <section class="section parallax bg2">
-    <h1>Section 2</hi>
+    <h1>Section 2</h1>
   </section>
 </main>
 <script type="text/javascript" src="script/index.js"></script>
