--- a/drill.html
+++ b/drill.html
@@ -31,7 +31,7 @@
     </center><br>
     <div id="drillselect">
     <center>
-    <div id="selector">
+    <div id="selector"><br>
       <h2>Drill Sheets</h2>
       <h4>Section</h4>
       <select id="instrument">
