--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Home</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/x-icon" href="images/np3.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/np_fav_2.png"/>
 </head>
 
 <body>
