--- a/drill.html
+++ b/drill.html
@@ -4,7 +4,7 @@
 <head>
     <title>Drill</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/x-icon" href="https://www.ucvts.tec.nj.us/cms/lib/NJ03001805/Centricity/Domain/4/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/np_fav_2.png"/>
     <script type="text/javascript" src="script/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
