--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Home</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/x-icon" href="images/np_fav_2.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/np_fav.png"/>
 </head>
 
 <body>
@@ -19,6 +19,14 @@
       <li><a href="guard.html">Guard</a></li>
       <li><a href="scroll.html">Scroll</a></li>
     </ul>
+    <!-- YO PUT THE NP FAVICON ON THE KBALL BACKGROUND BUT NP GREEN -->
+    <!-- YO PUT THE NP FAVICON ON THE KBALL BACKGROUND BUT NP GREEN -->
+    <!-- YO PUT THE NP FAVICON ON THE KBALL BACKGROUND BUT NP GREEN -->
+    <!-- YO PUT THE NP FAVICON ON THE KBALL BACKGROUND BUT NP GREEN -->
+    <!-- YO PUT THE NP FAVICON ON THE KBALL BACKGROUND BUT NP GREEN -->
+    <!-- YO PUT THE NP FAVICON ON THE KBALL BACKGROUND BUT NP GREEN -->
+    <!-- YO PUT THE NP FAVICON ON THE KBALL BACKGROUND BUT NP GREEN -->
+    <!-- YO PUT THE NP FAVICON ON THE KBALL BACKGROUND BUT NP GREEN -->
   </nav>
   <br>
       <center><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></center><br>
