--- a/guard.html
+++ b/guard.html
@@ -4,7 +4,7 @@
 <head>
     <title>Home</title>
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/x-icon" href="images/np_fav_2.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"/>
     <script type="text/javascript" src="script/index.js"></script>
 </head>
 
