fixed the spelling of new providence you retard

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <br>
       <center><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></center><br>
       <div class="head">
-        <h1>Welcome to the official unofficial New Providnece Marching Band Website!</h1>
+        <h1>Welcome to the official unofficial New Providence Marching Band Website!</h1>
       </div>
       <center><iframe id="remind-widget" title="Remind Messages" alt="Remind Messages"src="https://widgets.remind.com/widget?height=500&join=true&token=f9d9faa031ef013642500242ac110002"></iframe></center><br>
   </div>
